--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,3 @@
-
-
 .main {
   /*padding: 4rem 0;*/
   flex: 1;
@@ -176,7 +174,7 @@
 }
 
 .textStrong {
-  color: #71B2FF;
+  color: #127382;
   font-size: 1.5rem;
   font-weight: bolder;
   margin: .8rem;
